Fixed BG alignment for videography section

--- a/assets/css/2-modules/buttons.sass
+++ b/assets/css/2-modules/buttons.sass
@@ -22,14 +22,14 @@
         content: ""
         position: absolute
         background: $nav-mob-sub-background
-        bottom: 100%
+        bottom: 0
         left: 0
-        right: 0
+        right: 100%
         top: 0
         z-index: -1
         -webkit-transition: right 0.2s ease-in-out
     &:hover::before
-        bottom: 0
+        right: 0
     &:hover
         color: $button-hover
     &:active
